Remove position fixed of footer and use gap instead of margin

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -13,10 +13,6 @@ footer {
     align-items:  center;
     align-self:   center;
     display:      flex;
-
-    > *:not(:first-child) {
-      margin-left: fun.convert-px-to-rem(12);
-    }
   }
 
   @include mixins.noisy-background();
